platform-gitops/env-manifests/dev/ingress/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: letsencrypt-route53-dns01
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argo.dev.myplatformproject.com
      secretName: argo-dev-myplatformproject-com-tls
  rules:
    - host: argo.dev.myplatformproject.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
